Update example to use 24.1.1