@@ -1,11 +1,10 @@
-package com.chemaxon.calculations.lambda;
+package com.chemaxon.calculations.lambda.majorms;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 
 /**
  * Stores input data for the {@link MajorMsCalculator}.
- * 
+ *
  * @author Laszlo Antal
  * @author Gabor Imre
  */
@@ -21,18 +20,18 @@ public class MajorMsRequest {
      */
     public List<Double> pH;
 
-    
     /**
      * Convenience factory for a single structure - pH pair.
-     * 
+     *
      * @param smiles Input structure
      * @param pH pH to use
      * @return Created instance
      */
     public static MajorMsRequest ofSingle(String smiles, double pH) {
-        final MajorMsRequest ret = new MajorMsRequest();
-        ret.pH = ImmutableList.of(pH);
-        ret.smiles = ImmutableList.of(smiles);
+        MajorMsRequest ret = new MajorMsRequest();
+        ret.pH = List.of(pH);
+        ret.smiles = List.of(smiles);
         return ret;
     }
+
 }
